--- a/estiloshistoria.css
+++ b/estiloshistoria.css
@@ -250,3 +250,28 @@ html, body {
         font-size: 16px;
     }
 }
+
+.img-fixed {
+    width: 100%; 
+    height: 250px; 
+    object-fit: cover; 
+    border-radius: 10px; 
+}
+.btn-leer-mas {
+    text-decoration: none;
+    padding: 5px 20px;
+    color: #fff;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+    background-color: #000;
+    font-size: 16px;
+    cursor: pointer;
+    display: inline-block;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.btn-leer-mas:hover {
+    background-color: #FF0000;
+    color: #fff;
+}
