--- a/estiloscontacto.css
+++ b/estiloscontacto.css
@@ -1,4 +1,4 @@
-/* Estilos de Contacto Modificados para AA */
+
 .form-container {
     max-width: 1200px; margin: 0 auto;
     padding: 40px;
@@ -119,5 +119,41 @@
 
     .text-block {
         font-size: 16px;
+    }
+}
+@media (max-width: 689px) {
+    .footer {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .footer p {
+        font-size: 16px;
+        text-align: center;
+    }
+
+    .social-media {
+        margin-top: 10px;
+    }
+
+    .social-media img {
+        width: 40px;
+        height: 40px;
+    }
+}
+@media (max-width: 689px) {
+    .menu ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .menu ul li {
+        margin: 5px 0;
+    }
+
+    .menu ul li a {
+        display: block;
+        width: 100%;
+        text-align: center;
     }
 }
