--- a/estiloshistoria.css
+++ b/estiloshistoria.css
@@ -275,3 +275,68 @@ html, body {
     background-color: #FF0000;
     color: #fff;
 }
+@media (max-width: 689px) {
+    .header {
+        padding: 15px 10px;
+    }
+
+    .menu ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .menu ul li {
+        margin: 5px 0;
+    }
+
+    .search-bar-container {
+        flex-direction: row;
+        width: 100%;
+        margin: 10px 0;
+    }
+
+    .search-bar-container input {
+        width: calc(100% - 90px);
+        margin-bottom: 0;
+    }
+
+    .search-bar-container button {
+        width: 80px;
+    }
+
+    .escudo-header {
+        position: relative;
+        top: 5px;
+        left: 50%;
+        transform: translateX(-50%);
+        height: 120px;
+        width: auto;
+    }
+
+    .title {
+        font-size: 32px;
+    }
+
+    .subtitle {
+        font-size: 18px;
+    }
+
+    .carousel-inner img {
+        height: auto;
+        object-fit: cover;
+    }
+
+    .social-media img {
+        width: 40px;
+        height: 40px;
+    }
+
+    .footer {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .footer p {
+        font-size: 16px;
+    }
+}
