--- a/styles.css
+++ b/styles.css
@@ -340,7 +340,13 @@ footer a:hover {
     .footer p {
         font-size: 16px;
     }
+
+    .video video {
+        width: 100%;
+        height: auto;
+    }
 }
+
 
 @media (max-width: 1024px) {
     .menu ul {
